# ai-hot-source

./: .gitignore  CNAME  COMPLIANCE.md  LICENSE  PRIVATE_PUBLIC_PIPELINE.md  PUBLISH-CYBERWOODS-PUBLIC.md  README.md  RELEASE.md  SENTINELS.md  STACK.md  START_HERE.md  hot-sauce-hero.html  hot-source-hero.html  index.html  pyproject.toml  sauce.py  source.py
.github/workflows/: update-data.yml
chrome-extension/mcpmarket-capture/: background.js  content.js  manifest.json  page-hook.js  popup.html  popup.js
data/: index.json  index.md
data/arxiv_cs_ai_recent/: latest.json  latest.md
data/github_curated_ai_repos/: latest.json  latest.md
data/huggingface_trending_models/: latest.json  latest.md
data/youtube_watch_videos/: latest.json  latest.md
docs/: clawds-claws.md  hooks-and-practices.md  mcp-market-capture.md  memory-deep-dive.md  tools-reference.md  voice-setup.md
invoke-guiding-sprite/: overlay_styled.py  sprite_guide.py  sprite_styles.py
private/: README.md
private/models/: MODEL_POLICY.md  catalog.json  router.py  routing-policy.json
sentinels/: dtr-pipeline.yaml  dtr_watcher.py
src/: __init__.py  engine.py
src/community_scrapes/: export.py  http.py  main.py
src/context-manager/: LICENSE  README.md  SKILL.md  STORY.md  activity-timeline.sh  attention-residuals.py  digest-gen.py  obs-log.py  observation-logger.sh  pre-compact-summary.py  pre-compact-summary.sh  session-digest.sh  settings-hooks.json
src/kpi/: __init__.py  cli.py  (+8 more)
tests/: test_breaker.py  test_db.py  test_eval.py  test_gate.py  test_kpi.py  test_mcpmarket.py  test_scorer.py
(+79 files in other folders)
